--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^19.0.0-rc.2",
     "@angular/platform-browser-dynamic": "^19.0.0-rc.2",
     "@angular/router": "^19.0.0-rc.2",
+    "@ngrx/signals": "^18.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
